--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Tittle</title>
+<title>Documento sin título</title>
+<link href="css/estilos.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
-<h1>Hola curso GIT</h1>
+<h1>Proyecto empresarial</h1>
+
+<p>Esto es un p&aacute;rrafo de ejemplo</p>
 
 </body>
 
