--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <h1> Proyecto empresarial </h1>
 
 <p>Esto es un p&aacute;rrafo de ejemplo</p>
+<p>P&aacute;rrafo agregado en GitHub</p>
 
 </body>
 
